som changes on the way: